[package]
name = "meanwhile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
dialoguer = "0.10.2"
nix = "0.25.0"
serde = { version = "1.0.145", features = ["derive"] }
tap = "1.0.1"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
