[package]
name = "meanwhile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
clap = { version = "4.0.17", features = ["derive"] }
color-eyre = "0.6.2"
dialoguer = "0.10.2"
flo_stream = "0.7.0"
futures = "0.3.25"
nix = "0.25.0"
serde = { version = "1.0.145", features = ["derive"] }
tap = "1.0.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
